Fix: Implement language switching for bulk action buttons and dialogs
- Add menu.bulk_actions.* translation keys support
- Implement retranslate_ui() for bulk action buttons (select all, deselect all, delete)
- Auto-close and reopen Settings dialog on language change
- Store settings_dialog reference for proper refresh
- Add logging for button text updates
- Update copilot instructions with language refresh rules

--- a/Language/de.json
+++ b/Language/de.json
@@ -117,7 +117,9 @@
         "bulk_actions": {
             "label": "Massenaktionen",
             "delete_checked": "Massenlöschung",
-            "delete": "Auswahl löschen"
+            "delete": "Auswahl löschen",
+            "select_all": "✓ Alles auswählen",
+            "deselect_all": "✗ Alles abwählen"
         },
         "action": {
             "label": "Aktion",
