feat: add manual start button and fix language support in mass import
- Add 'Start Import' button to manually trigger mass import instead of auto-start
- Fix language manager singleton usage in mass_import_monitor and failed_items_review_dialog
- Fix {count} placeholder not being replaced in ready_to_start message
- Add bypass_filters flag update for duplicate items during retry
- Fix QThread destroyed while running crash in main import worker
- Separate business logic (on_import_finished) from thread cleanup (on_thread_finished)
- Use QThread.finished signal for safe worker cleanup with wait(5000)
- Add translations for start_button, ready_to_start, and import_prepared
- Change default values to English (international standard) in mass_import_monitor

--- a/Language/de.json
+++ b/Language/de.json
@@ -434,7 +434,12 @@
                 "items_ignored_success": "✅ {count} Item(s) erfolgreich ignoriert",
                 "error_marking_ignored": "❌ Fehler beim Markieren von Items als ignoriert: {error}",
                 "export_errors_title": "Importfehler exportieren",
-                "export_logs_title": "Import-Logs exportieren"
+                "export_logs_title": "Import-Logs exportieren",
+                "retry_in_progress_title": "Wiederholung läuft",
+                "retry_in_progress_message": "{count} Item(s) werden wiederholt.\n\nDer Import wird im Massenimport-Monitor-Fenster fortgesetzt.",
+                "start_button": "▶️ Import starten",
+                "ready_to_start": "✅ Bereit zum Importieren von {count} Vorlage(n). Klicken Sie auf 'Import starten', um zu beginnen.",
+                "import_prepared": "📥 {count} Vorlagendatei(en) geladen. Bereit zum Starten."
             },
             "failed_items": {
                 "title": "Gefilterte Gegenstände prüfen",
