wip: add currency tracking to template preview (will move to ArmorManagementDialog)

--- a/Language/de.json
+++ b/Language/de.json
@@ -724,6 +724,7 @@
         "metadata_group": "📋 Informationen",
         "items_group": "📦 Items ({count})",
         "stats_group": "📊 Statistiken",
+        "currency_group": "💰 Währungszusammenfassung",
         "label_class": "Klasse:",
         "label_realm": "Reich:",
         "label_season": "Saison:",
@@ -735,6 +736,15 @@
         "label_notes": "Notizen:",
         "stats_total_items": "Gesamt Items:",
         "stats_slots_covered": "Belegte Slots:",
+        "col_owned": "✓",
+        "col_item": "Gegenstand",
+        "col_price": "Preis",
+        "col_currency": "Währung",
+        "col_zone": "Zone",
+        "no_prices": "Keine Preise verfügbar",
+        "currency_total": "Gesamt: {total}",
+        "currency_owned": "Besessen: {owned}",
+        "currency_missing": "Fehlend: {missing}",
         "button_load": "📥 Diese Vorlage laden",
         "button_close": "Schließen"
     },
