--- a/Language/en.json
+++ b/Language/en.json
@@ -724,6 +724,7 @@
         "metadata_group": "📋 Information",
         "items_group": "📦 Items ({count})",
         "stats_group": "📊 Statistics",
+        "currency_group": "💰 Currency Summary",
         "label_class": "Class:",
         "label_realm": "Realm:",
         "label_season": "Season:",
@@ -735,6 +736,15 @@
         "label_notes": "Notes:",
         "stats_total_items": "Total items:",
         "stats_slots_covered": "Slots covered:",
+        "col_owned": "✓",
+        "col_item": "Item",
+        "col_price": "Price",
+        "col_currency": "Currency",
+        "col_zone": "Zone",
+        "no_prices": "No prices available",
+        "currency_total": "Total: {total}",
+        "currency_owned": "Owned: {owned}",
+        "currency_missing": "Missing: {missing}",
         "button_load": "📥 Load this template",
         "button_close": "Close"
     },
