--- a/Language/fr.json
+++ b/Language/fr.json
@@ -724,6 +724,7 @@
         "metadata_group": "📋 Informations",
         "items_group": "📦 Items ({count})",
         "stats_group": "📊 Statistiques",
+        "currency_group": "💰 Résumé des devises",
         "label_class": "Classe :",
         "label_realm": "Royaume :",
         "label_season": "Saison :",
@@ -735,6 +736,15 @@
         "label_notes": "Notes :",
         "stats_total_items": "Total items :",
         "stats_slots_covered": "Slots couverts :",
+        "col_owned": "✓",
+        "col_item": "Item",
+        "col_price": "Prix",
+        "col_currency": "Devise",
+        "col_zone": "Zone",
+        "no_prices": "Aucun prix disponible",
+        "currency_total": "Total: {total}",
+        "currency_owned": "Possédé: {owned}",
+        "currency_missing": "Manquant: {missing}",
         "button_load": "📥 Charger ce template",
         "button_close": "Fermer"
     },
