Add item categorization system with quest/event reward support
- Add 3-category system (quest_reward , event_reward , unknown )
- Add multi-language support (EN/FR/DE) for category labels
- Add item_category and ignore_item fields to database schema
- Implement ItemCategoryDialog for user categorization
- Integrate categorization in SearchMissingPricesDialog and FailedItemsReviewDialog
- Add category display in template preview with emoji icons
- Implement realm-aware database search for category display
- Update both technical documentations with categorization system
- Categorize 2 existing items as quest_reward
- Change quest_reward emoji from  to  for better alignment

--- a/Language/en.json
+++ b/Language/en.json
@@ -379,8 +379,8 @@
                 "status_no_date": "-"
             },
             "mass_import_monitor": {
-                "window_title": "📦 Mass Import",
-                "title": "📦 Mass Import",
+                "window_title": "🔧 Database Management Tools",
+                "title": "🔧 Database Management Tools",
                 "stats_group": "📊 Real-Time Statistics",
                 "unique_items": "🔍 Unique items:",
                 "variants_found": "🌐 Variants found:",
