Add comprehensive Database Editor for items_database_src.json
- Add DatabaseEditorDialog with full CRUD operations
- Implement search and filter system (name, realm, category, price status)
- Add split-view interface (items list + detailed editor)
- Support all 16 database fields with proper validation
- Add undo/redo functionality with state management
- Implement auto-backup before modifications
- Add comprehensive multi-language support (FR/EN/DE - 53 translation keys)
- Integrate editor button in SuperAdmin > Advanced Operations
- Add confirmation dialogs for destructive operations
- Support composite key management (name:realm format)
- Add real-time item counting and filtering stats
- Implement proper error handling and user feedback

Features:
 Add/Edit/Delete items with validation
 Advanced search and filtering
 Undo/Redo with deep state copying
 Auto-backup to Data/Backups/
 Full translation support (FR/EN/DE)
 Real-time database statistics
 Confirmation for destructive actions
 Composite key handling for multi-realm items

--- a/Language/de.json
+++ b/Language/de.json
@@ -854,6 +854,8 @@
         "clean_duplicates_tooltip": "Doppelte Gegenstände aus Quell-Datenbank entfernen",
         "refresh_items_button": "🔄 Alle Gegenstände aktualisieren",
         "refresh_items_tooltip": "Alle Gegenstände von Eden neu laden um Daten zu aktualisieren (Modell, DPS, Geschwindigkeit, usw.)",
+        "database_editor_button": "🗄️ Datenbank-Editor",
+        "database_editor_tooltip": "Editor öffnen, um items_database_src.json direkt zu bearbeiten",
         "clean_removed_count": "Entfernte Gegenstände",
         "no_files_selected_title": "Keine Dateien",
         "no_files_selected_message": "Bitte mindestens eine .txt-Datei auswählen",
@@ -882,6 +884,56 @@
         "refresh_fields_updated": "Aktualisierte Felder",
         "progress_title": "Wird erstellt...",
         "progress_description": "Verarbeitung der Vorlagendateien"
+    },
+    "db_editor": {
+        "window_title": "🗄️ Datenbank-Editor - items_database_src.json",
+        "title": "🗄️ Datenbank-Editor",
+        "warning": "⚠️ Direkte Änderung der internen Datenbank - Änderungen sind sofort und dauerhaft",
+        "search_label": "🔍 Suchen:",
+        "search_placeholder": "Gegenstandsname, ID oder Reich...",
+        "realm_label": "Reich:",
+        "category_label": "Kategorie:",
+        "filter_all": "Alle",
+        "filter_has_price": "Mit Preis",
+        "filter_no_price": "Ohne Preis",
+        "filter_quest_reward": "Questbelohnung",
+        "filter_event_reward": "Event-Belohnung",
+        "filter_unknown": "Unbekannt",
+        "add_item_button": "➕ Gegenstand hinzufügen",
+        "items_list_label": "📋 Gegenstandsliste",
+        "column_key": "Schlüssel",
+        "column_name": "Name",
+        "column_realm": "Reich",
+        "column_slot": "Platz",
+        "column_price": "Preis",
+        "items_count": "0 Gegenstände",
+        "items_count_value": "{count} Gegenstände",
+        "filtered_count": "{visible} / {total} Gegenstände",
+        "item_editor_label": "✏️ Gegenstandseditor",
+        "save_item_button": "💾 Gegenstand speichern",
+        "delete_item_button": "🗑️ Gegenstand löschen",
+        "undo_button": "↶ Rückgängig",
+        "redo_button": "↷ Wiederholen",
+        "reload_button": "🔄 Datenbank neu laden",
+        "close_button": "✖ Schließen",
+        "db_not_found": "Datenbankdatei nicht gefunden:\n{path}",
+        "load_error": "Fehler beim Laden der Datenbank:\n{error}",
+        "validation_error_title": "Validierungsfehler",
+        "required_field_error": "Feld '{field}' ist erforderlich!",
+        "save_success": "Gegenstand '{name}' erfolgreich gespeichert!",
+        "delete_confirm_title": "Löschen bestätigen",
+        "delete_confirm_message": "Gegenstand '{name}' löschen?\n\nDiese Aktion kann nicht rückgängig gemacht werden!",
+        "delete_success": "Gegenstand '{name}' erfolgreich gelöscht!",
+        "add_new_item_title": "Neuen Gegenstand hinzufügen",
+        "item_name_label": "Gegenstandsname:",
+        "invalid_input_title": "Ungültige Eingabe",
+        "empty_name_error": "Gegenstandsname kann nicht leer sein!",
+        "duplicate_item_title": "Doppelter Gegenstand",
+        "duplicate_item_message": "Gegenstand '{name}' ({realm}) existiert bereits!",
+        "reload_title": "Datenbank neu laden",
+        "reload_confirm": "Datenbank aus Datei neu laden?\n\nAlle nicht gespeicherten Änderungen gehen verloren!",
+        "save_error": "Fehler beim Speichern der Datenbank:\n{error}",
+        "enter_field_placeholder": "{field} eingeben..."
     },
     "armoury_dialog": {
         "title": "Waffenkammer-Verwaltung - {name} ({realm} - {season})",
