--- a/Language/en.json
+++ b/Language/en.json
@@ -854,6 +854,8 @@
         "clean_duplicates_tooltip": "Remove duplicate items from source database",
         "refresh_items_button": "🔄 Refresh All Items",
         "refresh_items_tooltip": "Re-scrape all items from Eden to update data (Model, DPS, Speed, etc.)",
+        "database_editor_button": "🗄️ Database Editor",
+        "database_editor_tooltip": "Open editor to directly modify items_database_src.json",
         "clean_removed_count": "Items removed",
         "no_files_selected_title": "No Files",
         "no_files_selected_message": "Please select at least one .txt file",
@@ -882,6 +884,56 @@
         "refresh_fields_updated": "Fields updated",
         "progress_title": "Building...",
         "progress_description": "Processing template files"
+    },
+    "db_editor": {
+        "window_title": "🗄️ Database Editor - items_database_src.json",
+        "title": "🗄️ Database Editor",
+        "warning": "⚠️ Direct modification of internal database - Changes are immediate and permanent",
+        "search_label": "🔍 Search:",
+        "search_placeholder": "Item name, ID, or realm...",
+        "realm_label": "Realm:",
+        "category_label": "Category:",
+        "filter_all": "All",
+        "filter_has_price": "Has Price",
+        "filter_no_price": "No Price",
+        "filter_quest_reward": "Quest Reward",
+        "filter_event_reward": "Event Reward",
+        "filter_unknown": "Unknown",
+        "add_item_button": "➕ Add Item",
+        "items_list_label": "📋 Items List",
+        "column_key": "Key",
+        "column_name": "Name",
+        "column_realm": "Realm",
+        "column_slot": "Slot",
+        "column_price": "Price",
+        "items_count": "0 items",
+        "items_count_value": "{count} items",
+        "filtered_count": "{visible} / {total} items",
+        "item_editor_label": "✏️ Item Editor",
+        "save_item_button": "💾 Save Item",
+        "delete_item_button": "🗑️ Delete Item",
+        "undo_button": "↶ Undo",
+        "redo_button": "↷ Redo",
+        "reload_button": "🔄 Reload Database",
+        "close_button": "✖ Close",
+        "db_not_found": "Database file not found:\n{path}",
+        "load_error": "Failed to load database:\n{error}",
+        "validation_error_title": "Validation Error",
+        "required_field_error": "Field '{field}' is required!",
+        "save_success": "Item '{name}' saved successfully!",
+        "delete_confirm_title": "Confirm Deletion",
+        "delete_confirm_message": "Delete item '{name}'?\n\nThis action cannot be undone!",
+        "delete_success": "Item '{name}' deleted successfully!",
+        "add_new_item_title": "Add New Item",
+        "item_name_label": "Item Name:",
+        "invalid_input_title": "Invalid Input",
+        "empty_name_error": "Item name cannot be empty!",
+        "duplicate_item_title": "Duplicate Item",
+        "duplicate_item_message": "Item '{name}' ({realm}) already exists!",
+        "reload_title": "Reload Database",
+        "reload_confirm": "Reload database from file?\n\nAll unsaved changes will be lost!",
+        "save_error": "Failed to save database:\n{error}",
+        "enter_field_placeholder": "Enter {field}..."
     },
     "armoury_dialog": {
         "title": "Armoury Management - {name} ({realm} - {season})",
