--- a/Language/fr.json
+++ b/Language/fr.json
@@ -854,6 +854,8 @@
         "clean_duplicates_tooltip": "Supprimer les items en double dans la base source",
         "refresh_items_button": "🔄 Rafraîchir tous les items",
         "refresh_items_tooltip": "Re-scraper tous les items depuis Eden pour mettre à jour les données (Model, DPS, Speed, etc.)",
+        "database_editor_button": "🗄️ Éditeur de Base de Données",
+        "database_editor_tooltip": "Ouvrir l'éditeur pour modifier directement items_database_src.json",
         "clean_removed_count": "Items supprimés",
         "no_files_selected_title": "Aucun fichier",
         "no_files_selected_message": "Veuillez sélectionner au moins un fichier .txt",
@@ -882,6 +884,56 @@
         "refresh_fields_updated": "Champs mis à jour",
         "progress_title": "Construction en cours...",
         "progress_description": "Traitement des fichiers template"
+    },
+    "db_editor": {
+        "window_title": "🗄️ Éditeur de Base de Données - items_database_src.json",
+        "title": "🗄️ Éditeur de Base de Données",
+        "warning": "⚠️ Modification directe de la base de données interne - Les changements sont immédiats et permanents",
+        "search_label": "🔍 Rechercher:",
+        "search_placeholder": "Nom d'item, ID, ou royaume...",
+        "realm_label": "Royaume:",
+        "category_label": "Catégorie:",
+        "filter_all": "Tous",
+        "filter_has_price": "Avec prix",
+        "filter_no_price": "Sans prix",
+        "filter_quest_reward": "Récompense de quête",
+        "filter_event_reward": "Récompense d'événement",
+        "filter_unknown": "Inconnu",
+        "add_item_button": "➕ Ajouter un item",
+        "items_list_label": "📋 Liste des Items",
+        "column_key": "Clé",
+        "column_name": "Nom",
+        "column_realm": "Royaume",
+        "column_slot": "Emplacement",
+        "column_price": "Prix",
+        "items_count": "0 items",
+        "items_count_value": "{count} items",
+        "filtered_count": "{visible} / {total} items",
+        "item_editor_label": "✏️ Éditeur d'Item",
+        "save_item_button": "💾 Sauvegarder l'item",
+        "delete_item_button": "🗑️ Supprimer l'item",
+        "undo_button": "↶ Annuler",
+        "redo_button": "↷ Rétablir",
+        "reload_button": "🔄 Recharger la base",
+        "close_button": "✖ Fermer",
+        "db_not_found": "Fichier de base de données introuvable:\n{path}",
+        "load_error": "Échec du chargement de la base:\n{error}",
+        "validation_error_title": "Erreur de validation",
+        "required_field_error": "Le champ '{field}' est obligatoire !",
+        "save_success": "Item '{name}' sauvegardé avec succès !",
+        "delete_confirm_title": "Confirmer la suppression",
+        "delete_confirm_message": "Supprimer l'item '{name}' ?\n\nCette action est irréversible !",
+        "delete_success": "Item '{name}' supprimé avec succès !",
+        "add_new_item_title": "Ajouter un nouvel item",
+        "item_name_label": "Nom de l'item:",
+        "invalid_input_title": "Entrée invalide",
+        "empty_name_error": "Le nom de l'item ne peut pas être vide !",
+        "duplicate_item_title": "Item en double",
+        "duplicate_item_message": "L'item '{name}' ({realm}) existe déjà !",
+        "reload_title": "Recharger la base",
+        "reload_confirm": "Recharger la base depuis le fichier ?\n\nToutes les modifications non sauvegardées seront perdues !",
+        "save_error": "Échec de la sauvegarde:\n{error}",
+        "enter_field_placeholder": "Entrez {field}..."
     },
     "armoury_dialog": {
         "title": "Gestion de l'Armurerie - {name} ({realm} - {season})",
